# cartridges-del

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.common.yml  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
dockerfiles/cartridges/: Dockerfile
source/: config.py  main.py
source/api/v1/: app.py
tests/: conftest.py
